--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     </style>
   </head>
   <body class="bg-gray-100 flex items-center justify-center min-h-screen">
-    <!-- The compiled TypeScript output file -->
+     <h1 id="Counter" class="text-6xl font-bold text-blue-600 mb-8">10</h1>
+
+  <div class="flex space-x-4">
+    <button id="d" class="bg-red-500 text-white px-6 py-2 rounded-lg hover:bg-red-600 transition">Decrement</button>
+    <button id="i" class="bg-green-500 text-white px-6 py-2 rounded-lg hover:bg-green-600 transition">Increment</button>
+    <button id="r" class="bg-gray-500 text-white px-6 py-2 rounded-lg hover:bg-gray-600 transition">Reset</button>
     <script src="./dist/script.js"></script>
   </body>
 </html>
